--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "monyxie/agora-token-builder": "^0.1.0",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "andyabih/laravel-to-uml": "^1.0",
