--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "monyxie/agora-token-builder": "^0.1.0",
         "pusher/pusher-php-server": "^7.2"
@@ -78,6 +78,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
